fixed spacing on about text

--- a/css/local.less
+++ b/css/local.less
@@ -233,6 +233,10 @@
 @media only screen and (min-width: 1300px) {
 	#about {
 		font-size: 24/20em;
+
+		.text {
+			max-width: 45vw;
+		}
 	}
 }
 /*-- -------------------------- -->
